--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         <template id="most-popular">
           <li class="w-[22.5%] mb-4">
             <div class="card w-full bg-base-100 h-[350px] shadow-xl">
-              <figure>
+              <figure class="">
                 <img
-                  class="product-img"
+                  class="product-img w-[130px] object-cover"
                   src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
                   alt="Shoes"
                 />
