--- a/index.html
+++ b/index.html
@@ -213,10 +213,7 @@
                 />
               </figure>
               <div class="card-body">
-                <h2 class="product-title font-bold text-primary">
-                  Shoes!
-                  <div class="badge badge-secondary skidka">21%</div>
-                </h2>
+                <h2 class="product-title font-bold text-primary">Shoes!</h2>
                 <p class="w-full product-description font-bold">
                   If a dog chews shoes whose shoes does he choose?
                 </p>
@@ -226,7 +223,7 @@
                       class="old-price text-gray-600 text-sm line-through block"
                       >21.000 sum</span
                     >
-                    <span class="text-md font-bold">18.000 sum</span>
+                    <span class="text-md font-bold price">18.000 sum</span>
                   </div>
                   <span class="badge badge-secondary skidka">21%</span>
                 </div>
