--- a/pages/infoProduct.html
+++ b/pages/infoProduct.html
@@ -137,9 +137,98 @@
     </div>
     <!-- MAIN SECTION -->
     <main class="mt-[25px] container mx-auto md:px-20 sm:px-10">
-      <div>
-        <div class="w-[60px]">
-          <img src="../img/img.jpg" alt="" class="w-[330px]" />
+      <div class="flex justify-between items-center gap-10 w-[70%] mx-auto">
+        <div class="w-[450px] border border-base-300 rounded-lg p-8">
+          <div class="w-64 carousel rounded-box">
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1565098772267-60af42b81ef2.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1572635148818-ef6fd45eb394.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1494253109108-2e30c049369b.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1550258987-190a2d41a8ba.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1559181567-c3190ca9959b.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+            <div class="carousel-item w-full">
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1601004890684-d8cbf643f5f2.jpg"
+                class="w-full"
+                alt="Tailwind CSS Carousel component"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="w-full flex flex-col gap-10">
+          <div class="flex items-center justify-between w-full">
+            <p class="px-2 py-1 bg-primary rounded-3xl">
+              sale <span>50%</span>
+            </p>
+            <div class="flex gap-4">
+              <i
+                class="fa-regular fa-heart text-2xl text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-all"
+              ></i>
+              <i
+                class="fa-solid fa-share-nodes text-2xl text-gray-600 hover:cursor-pointer hover:text-gray-800 transition-all"
+              ></i>
+            </div>
+          </div>
+          <div>
+            <h1 class="info-product-title text-[40px] font-bold">
+              mack book pro
+            </h1>
+          </div>
+          <div class="flex- flex-col gap-2">
+            <span class="old-price text-gray-600 text-sm line-through block"
+              >21.000 sum</span
+            >
+            <span class="text-2xl font-bold price text-primary"
+              >18.000 sum</span
+            >
+          </div>
+          <div class="flex gap-2">
+            <button class="btn btn-outline btn-primary hover:text-white">
+              <i class="fa-solid fa-comment-dots"></i>
+            </button>
+            <button class="btn btn-outline btn-primary hover:text-white">
+              <i class="fa-solid fa-cart-plus"></i> Add to card
+            </button>
+            <button class="btn btn-primary text-white">
+              <i class="fa-solid fa-bag-shopping"></i>By now
+            </button>
+          </div>
         </div>
       </div>
     </main>
