--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 </div>
                 <div class="card-actions">
                   <a
-                    href="./pages/infoProduct.html"
+                    id="link"
+                    href=""
                     class="w-full border border-primary text-center px-4 rounded-3xl hover:bg-inherit transition-all hover:text-primary cursor-pointer py-1 my-link font-semibold"
                     >shop now</a
                   >
@@ -241,8 +242,8 @@
       </ul>
     </main>
 
-    <script src="./js/modal.js"></script>
-    <script src="./js/request.js"></script>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/request.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
